Write Like model docs for GET
